--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,11 @@ build = "build.rs"
 
 
 [build-dependencies]
-gcc = "0.3"
+cc = "1.0"
 
 [dev-dependencies]
 rand = "0.4"
+
+[dependencies]
+libc = "0.2"
+
